libs/wingc/src/jsify/captures/snapshots/wingc__jsify__captures__tests__preflight_object_with_operations_multiple_methods.snap
---
source: libs/wingc/src/jsify/captures/tests.rs
expression: "capture_ok(r#\"\n    bring cloud;\n    let b = new cloud.Bucket();\n\n    class Foo {\n      inflight put() {\n        b.put(\"hello1\", \"world\");\n      }\n\n      inflight list() {\n        b.list();\n      }\n    }\n    \"#)"
---
======================================================
Captured by Foo:

======================================================
Files:

inflight.Foo.js
------------------------------------------------------
module.exports = function({ $b }) {
  class Foo {
    async $inflight_init()  {
    }
    async put()  {
      (await $b.put("hello1","world"));
    }
    async list()  {
      (await $b.list());
    }
    constructor({  }) {
    }
  }
  return Foo;
}

main.w
------------------------------------------------------

    bring cloud;
    let b = new cloud.Bucket();

    class Foo {
      inflight put() {
        b.put("hello1", "world");
      }

      inflight list() {
        b.list();
      }
    }
    
preflight.js
------------------------------------------------------
const cloud = require('@winglang/sdk').cloud;
class Foo extends $stdlib.std.Resource {
  constructor(scope, id, ) {
    super(scope, id);
    this._addInflightOps("put", "list");
  }
  static _toInflightType(context) {
    const $b = context._lift(b);
    return $stdlib.core.NodeJsCode.fromInline(`
      require("./inflight.Foo.js")({ 
        $b: ${$b},
      })
    `);
  }
  _toInflight() {
    return $stdlib.core.NodeJsCode.fromInline(`
      (await (async () => {
        const client = new (${Foo._toInflightType(this).text})({
        });
        if (client.$inflight_init) { await client.$inflight_init(); }
        return client;
      })())
    `);
  }
  _registerBind(host, ops) {
    if (ops.includes("list")) {
      Foo._registerBindObject(b, host, ["list", "put"]);
    }
    super._registerBind(host, ops);
  }
}
const b = this.node.root.newAbstract("@winglang/sdk.cloud.Bucket",this,"cloud.Bucket");

